[gd_scene load_steps=6 format=3 uid="uid://ycs8e0odkebp"]

[ext_resource type="Script" path="res://Game.gd" id="1_mxm46"]
[ext_resource type="Texture2D" uid="uid://usllcsa8y7qh" path="res://assets/images/theskytile.png" id="2_2jaas"]
[ext_resource type="Script" path="res://addons/jam_launch/core/JamConnect.gd" id="2_wmh4p"]
[ext_resource type="PackedScene" uid="uid://bmqj6ncj1skc5" path="res://structures/BirdShrine.tscn" id="3_ivhqm"]
[ext_resource type="PackedScene" uid="uid://d1j0x4cd1q33f" path="res://structures/Island.tscn" id="4_gwpax"]

[node name="Game" type="Node2D"]
z_index = -3
y_sort_enabled = true
script = ExtResource("1_mxm46")

[node name="BG" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -5e+06
offset_top = -5e+06
offset_right = 5e+06
offset_bottom = 5e+06

[node name="TextureRect" type="TextureRect" parent="BG"]
z_index = -10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_2jaas")
expand_mode = 2
stretch_mode = 1

[node name="ColorRect" type="ColorRect" parent="BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.690196, 0.690196, 0.690196, 0.639216)

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Players" type="Node2D" parent="."]
y_sort_enabled = true

[node name="PlayersSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://character/Character.tscn")
spawn_path = NodePath("../Players")

[node name="World" type="Node2D" parent="."]
y_sort_enabled = true

[node name="BirdShrine" parent="World" instance=ExtResource("3_ivhqm")]

[node name="SpawnCenter" type="Node2D" parent="World"]

[node name="Island" parent="World" instance=ExtResource("4_gwpax")]
position = Vector2(-848, -424)

[node name="Island2" parent="World" instance=ExtResource("4_gwpax")]
position = Vector2(-251, 956)

[node name="Island3" parent="World" instance=ExtResource("4_gwpax")]
position = Vector2(1889, 217)

[node name="Island4" parent="World" instance=ExtResource("4_gwpax")]
position = Vector2(1110, -566)

[node name="Island5" parent="World" instance=ExtResource("4_gwpax")]
position = Vector2(-2008, 589)

[node name="Island6" parent="World" instance=ExtResource("4_gwpax")]
position = Vector2(1350, 1790)

[node name="JamConnect" type="Node" parent="."]
script = ExtResource("2_wmh4p")

[node name="InitialCam" type="Camera2D" parent="."]

[connection signal="player_disconnected" from="JamConnect" to="." method="_on_jam_connect_player_disconnected"]
[connection signal="player_verified" from="JamConnect" to="." method="_on_jam_connect_player_verified"]
